--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,12 @@
 			<artifactId>maven-scala-plugin</artifactId>
 			<version>2.10</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.uqbar-project</groupId>
+			<artifactId>uqbar-domain</artifactId>
+			<version>3.3</version>
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
@@ -42,6 +48,7 @@
 	</dependencies>
 
 	<build>
+		<sourceDirectory>src/main/scala</sourceDirectory>
 		<plugins>
 			<plugin>
 				<groupId>org.scala-tools</groupId>
