--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 /.project
 /bin
 /.cache
+/src/main/resources/informe-LaTex/QSim_Molinari_Rosito.aux
+/src/main/resources/informe-LaTex/QSim_Molinari_Rosito.log
+/src/main/resources/informe-LaTex/QSim_Molinari_Rosito.synctex.gz
+/src/main/resources/informe-LaTex/QSim_Molinari_Rosito.toc
