--- a/pom.xml
+++ b/pom.xml
@@ -4,29 +4,31 @@
 	<groupId>ar.edu.unq.tpi</groupId>
 	<artifactId>QSim</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	
+
 	<parent>
 		<groupId>org.uqbar-project</groupId>
 		<artifactId>uqbar-scala-parent</artifactId>
 		<version>1.3</version>
 	</parent>
-	
+
 
 	<dependencies>
 		<dependency>
 			<groupId>org.uqbar-project</groupId>
 			<artifactId>uqbar-domain</artifactId>
 			<version>3.5.1</version>
-			<exclusions>
-				<exclusion>
-				</exclusion>
-			</exclusions>
 		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.8</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.scala-lang.modules</groupId>
+			<artifactId>scala-parser-combinators_2.11</artifactId>
+			<version>1.0.3</version>
 		</dependency>
 
 	</dependencies>
