--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
 	<groupId>ar.edu.unq.tpi</groupId>
 	<artifactId>QSim</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	
+
 	<parent>
 		<groupId>org.uqbar-project</groupId>
 		<artifactId>uqbar-scala-parent</artifactId>
 		<version>1.3</version>
 	</parent>
-	
+
 
 	<dependencies>
 		<dependency>
@@ -28,6 +28,19 @@
 			<artifactId>junit</artifactId>
 			<version>4.8</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.scala-lang.modules</groupId>
+			<artifactId>scala-parser-combinators_2.11</artifactId>
+			<version>1.0.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.6.1</version>
+		</dependency>
+
 
 	</dependencies>
 
